feature(api): auth middleware
