# backend/cmd/api/main.go
@@ -4,6 +4,11 @@
 // @host            localhost:3000
 // @BasePath        /
 
+// @securityDefinitions.apikey  BearerAuth
+// @in                          header
+// @name                        Authorization
+// @description                 Type "Bearer" followed by a space and the JWT access token.
+
 package main
 
 import (
